// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delivery snapshot: with price value 1`] = `
<div
  className="delivery"
>
  <div
    className="icon deliveryIcon deliveryManIcon"
  />
  <span
    className="info"
  >
    400 руб.
  </span>
</div>
`;

exports[`Delivery snapshot: without price value 1`] = `
<div
  className="delivery"
>
  <div
    className="icon deliveryIcon deliveryManIcon"
  />
  <span
    className="info"
  >
    Бесплатно
  </span>
</div>
`;
